<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.article_about.ArticleAboutActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_article_about"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="#d1d1d1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/very_light_pink">

            <TextView
                android:id="@+id/txt_article_about_archive_title"
                style="@style/Text.NanumL.20s.28h"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="92dp"
                android:layout_marginBottom="31dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="지금 바로 시작할 수 있는\n린 브랜딩 방법론을 알려주세요" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/txt_article_about_source"
                style="@style/Text.NanumR.17s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_article_about_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_article_about_domain"
                style="@style/Text.NanumR.14s.23h.BrownishGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="30dp"
                android:maxLines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="brunch.co.kr" />

            <TextView
                android:id="@+id/txt_article_about_title"
                style="@style/Text.NanumL.14s.21h"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="41dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_article_about_domain"
                app:layout_constraintTop_toBottomOf="@+id/txt_article_about_domain"
                tools:text="디자이너가 알아두면 좋은 인하우스와 에이전  에이전시의 차이점랜딩은 린(lean)하게, " />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_article_about_read"
                style="@style/Text.NanumB.15s.24h.SoftBlue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/blue_edge_round"
                android:text="@string/new_article_about_read"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_article_about_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/very_light_pink">

            <TextView
                android:id="@+id/lable_article3"
                style="@style/Text.NanumB.14s.23h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="25dp"
                android:text="@string/new_article_about_archive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_article_about_show_all"
                style="@style/Text.NanumB.14s.23h.SoftBlue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="40dp"
                android:text="@string/new_article_about_showall"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_article_about_another_article" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_article_about_another_article"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lable_article3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
